--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,6 +9,13 @@
   <section class="about-main">
     <div class="secondary-content">
       <img class="self-image" src="../assets/images/about/self-image.jpg" alt="peter-cutler">
+
+      <section class="about-profile-contact-links">
+        <h2 class="contact-heading">Contact</h2>
+        <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
+        <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
+        <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
+      </section>
     </div>
 
     <div class="primary-content">
@@ -31,7 +38,7 @@
 
   </section>
 
-  <section class="about-contact-links">
+  <section class="about-bio-contact-links">
     <h2 class="contact-heading">Contact</h2>
     <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
     <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
