add ngx-page-scroll and configuration for work pages

--- a/src/app/article-footer/article-footer.component.html
+++ b/src/app/article-footer/article-footer.component.html
@@ -1,7 +1,7 @@
 <footer class="main-footer">
 
   <div *ngIf="longPage" class="scroll-to-top">
-    <span (click)="scrollToTop()" class="scroll-button button-underline">Back to Top</span>
+    <span pageScroll href="#scrollTop" class="scroll-button button-underline">Back to Top</span>
   </div>
 
   <!-- <div *ngIf="imageCredit" class="image-attribution">
