--- a/src/app/work/work-frame/work-frame.component.html
+++ b/src/app/work/work-frame/work-frame.component.html
@@ -1,5 +1,5 @@
 <section class="work-frame">
-  <header class="subject-header desktop-only">
+  <header class="subject-header desktop-only" id="scrollTop">
     <div class="heading">
       Work
     </div>
