--- a/src/app/work/work-header/work-header.component.html
+++ b/src/app/work/work-header/work-header.component.html
@@ -1,4 +1,4 @@
-<header class="work-header">
+<header class="work-header" id="scrollTop">
 
   <section class="work-titling">
     <h1 class="work-title">
