update offset for scroll

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -28,7 +28,7 @@
         </p>
         <p>
           I've worked in different tech roles for the past seven years, doing
-          things like writing, strategy, ux, design, and software engineering
+          things like strategy, ux, design, and software engineering
           with some great people. <a class="about-body-link" routerLink="/work">
           You can find some of my work here</a>. Take a look and feel free to
           reach out.
