update a11y support and cleanup

--- a/src/app/article-footer/article-footer.component.html
+++ b/src/app/article-footer/article-footer.component.html
@@ -1,7 +1,12 @@
-<footer class="main-footer">
+<footer class="main-footer" role="contentinfo">
 
   <div *ngIf="longPage" class="scroll-to-top">
-    <span pageScroll href="#scrollTop" class="scroll-button button-underline">Back to Top</span>
+    <span 
+      pageScroll
+      href="#scrollTop"
+      class="scroll-button button-underline">
+      Back to Top
+    </span>
   </div>
 
   <!-- <div *ngIf="imageCredit" class="image-attribution">
