--- a/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
+++ b/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
@@ -1,11 +1,8 @@
-<article class="work-entry">
+<article class="work-entry" role="article">
 
   <app-work-header>
     <p>
-      We worked with the Oculus platform to understand how first-time users would grapple with a VR interface: what hurdles would they identify during on-boarding, and how would they operate and adapt to to an interface with no prior experience?
-    </p>
-    <p>
-       We found that on-boarding experiences were critical &mdash; both to the VR platform and to individual applications. Tutorial experiences should also be replayable, accessible, and navigable.
+      We worked with the Oculus platform to understand how first-time users would adapt to a VR interface with no prior experience. We found that on-boarding experiences were critical &mdash; both to the VR platform and to individual applications. Specifically, tutorial experiences should also be replayable, accessible, and navigable.
     </p>
   </app-work-header>
 
@@ -27,7 +24,7 @@
       </li>
     </ul>
     <p>
-      Why these applications? First, we wanted to test an interface-driven product, rather than a game. I had purchased the Rift when it launched and had seen how 3d design applications were taking advantage of the VR medium. As a team, we explored Tilt Brush together and decided it was a great candidate.
+      We wanted to test an interface-driven product, rather than a game. I had purchased the Rift back when it launched and used it for 3d design &mdash; as a team, we explored Tilt Brush together and decided it was a great candidate.
     </p>
     <div class="work-body-image-grid">
       <app-image-viewer
@@ -39,11 +36,14 @@
         description="Tilt Brush by Google">
       </app-image-viewer>
     </div>
+  </section>
+
+  <section class="work-section">
+    <h3 class="work-body-h3">
+      Platform and Application On-boarding
+    </h3>
     <p>
-      We also determined that we couldn't drop users into a complex application like Tilt Brush without on-boarding. As we used First Contact, we found we were interested in understanding users' reception and comprehension of the application.
-    </p>
-    <p>
-      On the one hand, it's a very game-like experience, but on the other, it's responsible for imparting foundational context and direction to the user. We wanted to explore how the user perceived this experience, and how well it taught them.
+      We determined that we couldn't drop users into a complex application like Tilt Brush without on-boarding for the platform. As a result, we incorporated First Contact into our design. We wanted to explore how the user perceived this experience, and how well it taught them the necessary basics of controlling the platform.
     </p>
   </section>
 
@@ -52,7 +52,7 @@
       Heuristic Evaluation
     </h2>
     <p>
-      Without stakeholders to dictate our direction, we used a <a class="work-body-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">heuristic analysis</a> of our applications to find worthwhile avenues to explore. Based on our evaluation, we found a wide array of possible problems to explore. We focused on a few at the outset:
+      We used a <a class="work-body-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">heuristic analysis</a> of our applications to find worthwhile avenues to explore. We focused on a few at the outset:
     </p>
     <ul class="work-body-list">
       <li>
@@ -78,10 +78,7 @@
       Research Planning
     </h2>
     <p>
-      Our next task was to use our findings from discovery to develop a concrete, clearly-scoped research plan.
-    </p>
-    <p>
-      We prioritized problems that were foundational, rather than those that could be attributed to "figuring out" emerging issues in VR. At this time, it's unrealistic that VR apps present a common, synchronous interface, for instance. We focused on education and on-boarding problems, and organized the following research questions:
+      To develop a clearly-scoped research plan, we prioritized problems that were foundational, rather than those that could be attributed to common, emerging issues in VR. At this time, it's unrealistic that all VR apps will adhere to "standards" for controls and interfaces &mdash; each app will require some adjusting. We focused on education and on-boarding problems, and organized the following research questions:
     </p>
     <ul class="work-body-list">
       <li>
@@ -97,9 +94,6 @@
     <h3 class="work-body-h3">
       Components of the Research Plan
     </h3>
-    <p>
-      We developed our research plan to outline how we would evaluate these questions. The plan included all of the necessary operational information.
-    </p>
     <ul class="work-body-list">
       <li>
         Target users, with inclusion and exclusion criteria
@@ -121,7 +115,7 @@
       </li>
     </ul>
     <p>
-      Based on our plan, we began to recruit and screen our participants. To do so we tapped our social networks and created an online screener survey. Meanwhile, we also prepared our session script, data collection documents, and other logistical docs.
+      Based on our plan, we began to recruit and screen our participants. Meanwhile, we prepared our session script and data collection documents.
     </p>
   </section>
 
@@ -157,7 +151,7 @@
       </li>
     </ul>
     <p>
-      We also conducted the interviews outlined in our research plan -- pre and post-test, as well as post-task and post-application interviews. During our team-mates' sessions, we aided in note-taking, chaperoning participants with the equipment, noting quantitative success/failure, and asking select follow-up questions during interviews.
+      We also conducted the interviews outlined in our research plan -- pre and post-test, as well as post-task and post-application interviews. During our teammates' sessions, we aided in note-taking, chaperoning participants with the equipment, noting quantitative success/failure, and asking select follow-up questions during interviews.
     </p>
   </section>
 
@@ -199,7 +193,7 @@
       This is a detailed report, and I'd be happy to answer any questions about it. We uncovered many actionable findings across both First Contact and Tilt Brush.
     </p>
     <p>
-      For me personally, I've enjoyed working with VR for many years, and the process of conducting this research only made me more certain about the exciting questions we can continue to explore in this interactive frontier.
+      For me personally, I've enjoyed working with VR for many years, and the process of conducting this research only made me more certain about the exciting questions we can continue to explore.
     </p>
   </section>
 
