--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -17,7 +17,7 @@
 }
 
 .bio p {
-  color: $dark-gray;
+  color: $main-text-gray;
   font-family: $body-font;
   font-size: $normal;
   line-height: 1.6em;
@@ -38,7 +38,7 @@
 }
 
 .contact-heading {
-  color: $mid-gray;
+  color: $mini-heading-gray;
   font-family: $mini-heading-font;
   font-size: $smaller;
   font-weight: 400;
