--- a/src/scss/_image-viewer.scss
+++ b/src/scss/_image-viewer.scss
@@ -21,11 +21,11 @@
   height: auto;
   font-size: $small;
   line-height: 1.0625rem;
-  color: $light-gray;
+  color: $support-gray;
 }
 
 .border {
-  border: 1px solid $light-gray;
+  border: 1px solid $support-gray;
 }
 
 .work-body-image-grid {
