--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="main-nav">
-  <section class="home">
+<nav class="main-nav" role="navigation">
+  <section class="home" role="banner">
     <a class="logo" routerLink="/about">Peter Cutler</a>
   </section>
   <section class="main-pages">
@@ -23,6 +23,6 @@
 
 <div class="mobile-border"></div>
 
-<main class="main-window">
+<main class="main-window" role="main">
   <router-outlet></router-outlet>
 </main>
