--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,17 +1,3 @@
-// Text
-$lightest-gray: $white-smoke;
-$mid-gray: $wild-sand;
-$light-gray: $dove-gray;
-$dark-gray: $obsidian;
-$darkest-gray: $nero;
-$accent-red: $elder-salmon;
-
-
-// Nav
-$nav-link: $obsidian;
-$nav-link-hover: $obsidian;
-$logo: $obsidian;
-
 // Borders
 $border-thin: 1px;
 $border-medium: 2px;
@@ -32,4 +18,5 @@ $breakpoints: (
   'huge': (min-width: 1280px)
 );
 
+// Primary responsive breakpoint
 $shift-nav-to-side: 'alarge';
