--- a/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
+++ b/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
@@ -2,7 +2,7 @@
 
   <app-work-header>
     <p>
-      Through a unique partnership between the <a class="work-body-link" target="_blank" href="https://media.ifrc.org/">International Federation of Red Cross and Red Crescent Societies (IFRC)</a> and the University of Washington, my class studying complex systems was able to collaboratively research ways to incorporate Human-Centered principles into the <a class="work-body-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a> system.
+      Through a unique partnership between the <a class="work-body-link" target="_blank" href="https://media.ifrc.org/">International Federation of Red Cross and Red Crescent Societies (IFRC)</a> and the University of Washington, my cohort was able to collaboratively research ways to incorporate Human-Centered principles into the <a class="work-body-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a> system.
     </p>
     <p>
       The IFRC uses a participatory design model for its community programs like the VCA. As experts on the meeting points of technology and human-centered research & design, we collaborated with Red Cross teams to layout opportunities to better integrate technology into their participatory VCA approach.
@@ -17,7 +17,7 @@
       At the outset of this project, our first step was to recalibrate our understanding of our domain to align with <a class="work-body-link" target="_blank" href="https://media.ifrc.org/ifrc/who-we-are/fundamental-principles/">humanitarian principles</a> and with <a class="work-body-link" target="_blank" href="http://www.un.org/en/universal-declaration-human-rights/">The Universal Declaration of Human Rights</a>.
     </p>
     <p>
-      If you want to understand some of this task of recalibration, please takea look at <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/wixuevlkpiu27dw/2.%20mays-racadio-gugerty.mismatch%20business%20and%20humanitarian%20logistics.2012Oct.pdf?dl=0">an excellent, quick summary of contextual shifts involved</a>. Designing with a humanitarian's outlook is not as intuitive as it sounds!
+      If you want to understand some of this task of recalibration, please takea look at <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/wixuevlkpiu27dw/2.%20mays-racadio-gugerty.mismatch%20business%20and%20humanitarian%20logistics.2012Oct.pdf?dl=0">an excellent, quick summary of contextual shifts involved</a>. Designing with a humanitarian's outlook is not always intuitive!
     </p>
     <div class="work-body-youtube-video work-video-embed">
       <iframe
@@ -45,8 +45,14 @@
     <p>
       This period of research aided us in understanding, first, the domain of our clients at the IFRC, and in turn, how they support millions of individuals through the VCA system.
     </p>
+  </section>
+
+  <section class="work-section">
+    <h2 class="work-body-h2">
+      Humanitarian Systems 101
+    </h2>
     <p>
-      Some examples of the many take-aways from this period include:
+      Some of our first lessons learned included:
     </p>
     <ul class="work-body-list">
       <li>
@@ -56,26 +62,14 @@
         In this domain, there are absolutely no quid pro quos. All of our actions are in the service of the community. Furthermore, we cannot define what serves the community &mdash; only they can do that.
       </li>
       <li>
-        Communicating scope is the best way to mitigate the constant push and pull of changing variables in a large, complex system. Stakeholders, requirements, participants, and directives may constantly change, but by maintaining a shared sense of scope, the project can still succeed.
+        Communicating scope is the best way to mitigate the constant push and pull of changing variables in a large, complex system. Stakeholders, requirements, participants, and directives may constantly change, but by maintaining a shared sense of scope, the project can still deliver results and value.
       </li>
       <li>
         Systems don't succeed or fail; rather, they shift around the active stakeholders' competing objectives. As researchers, our first task is to understand the system and those influencing it.
       </li>
     </ul>
     <p>
-      It's impossible to communicate the complexity of this system in a single case study, but I hope the resources above can provide some important context. This research period helped me to understand how to approach a complex system and build understanding from many different perspectives at once.
-    </p>
-  </section>
-
-  <section class="work-section">
-    <h2 class="work-body-h2">
-      Finding Opportunities
-    </h2>
-    <p>
-      Our task was not to "design" an intervention, but to develop a research plan which would be followed over the ensuing year. Subsequent research groups would use our plan to both continue our research and progress into design.
-    </p>
-    <p>
-      Having developed a nuanced understanding of the domain, our job was to outline research avenues that ensuing teams could explore. To do so, we each formed teams of four to explore contrasting opportunities.
+      It's impossible to communicate the complexity of this system in a single case study, but I hope the resources shared above can provide some important context.
     </p>
   </section>
 
