--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -5,7 +5,8 @@
     subheader="Projects with clients, companies, and schools">
   </app-article-header>
 
-  <div class="work-main">
+  <div
+    class="work-main">
     <div
       class="work-item"
       [ngClass]="work.url"
