add transitions and contact link updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
     </ul>
   </section>
   <section class="main-nav-item nav-contact-links">
+    <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter"></a>
     <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
-    <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
     <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
   </section>
 </nav>
