--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -21,7 +21,7 @@
   font-size: .75em;
   font-weight: bold;
   text-transform: uppercase;
-  color: $mine-shaft;
+  color: $support-gray;
   cursor: pointer;
 
   &::after {
