--- a/src/scss/_image-viewer.scss
+++ b/src/scss/_image-viewer.scss
@@ -87,11 +87,11 @@
   cursor: zoom-in;
 
   &.black {
-    color: $cool-shirt;
+    color: $support-gray;
   }
 
   &.salmon {
-    color: $youthful-salmon;
+    color: $accent-light-red;
   }
 }
 
