--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -37,6 +37,10 @@
   }
 }
 
+/**
+ * The rest of this is contact-link stuff
+ */
+
 .contact-heading {
   color: $mini-heading-gray;
   font-family: $mini-heading-font;
@@ -51,9 +55,13 @@
 .contact-link {
   display: inline;
   text-decoration: none;
-  font-size: 1.4rem;
-  padding-right: 1.2em;
+  padding: .6em;
+  font-size: 1.3rem;
   margin-top: 2em;
+
+  &:first-of-type {
+    padding-left: 0;
+  }
 }
 
 .contact-links {
@@ -65,11 +73,13 @@
     @extend .contact-link;
 
     &::before {
-      color: $silver;
+      color: $mini-heading-gray;
+
+      @include transition (all, 0.2s, ease-in-out)
     }
 
     &:hover::before {
-      color: $youthful-salmon;
+      color: $main-text-gray;
     }
   }
 }
