abstract nav component; add angular animate

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<article class="about-content">
+<article class="about-content" [@revealAboutItems]="revealAbout">
 
   <app-article-header
     class="desktop-only"
@@ -6,7 +6,7 @@
     subheader="Bio and contact information">
   </app-article-header>
 
-  <section class="about-main">
+  <section class="about-main about-item">
     <div class="secondary-content">
       <img class="self-image" src="../assets/images/about/self-image.jpg" alt="peter-cutler">
       <section class="about-profile-contact-links">
@@ -31,16 +31,25 @@
           You can find some of my work here</a>. Take a look and feel free to
           reach out.
         </p>
+
+        <section class="about-bio-contact-links">
+          <h2 class="contact-heading">Contact</h2>
+          <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
+          <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
+          <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
+        </section>
       </div>
     </div>
   </section>
 
-  <section class="about-bio-contact-links">
-    <h2 class="contact-heading">Contact</h2>
-    <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
-    <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
-    <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
-  </section>
 
-  <app-article-footer></app-article-footer>
+
+  <footer class="main-footer about-item" role="contentinfo">
+    <div class="border-footer">
+      <span class="copyright-text">
+        &copy; Copyright 2018, Peter Cutler
+      </span>
+    </div>
+  </footer>
+
 </article>
