--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,4 @@
-<nav class="main-nav" role="navigation">
-  <section class="main-nav-item home" role="banner">
-    <a class="logo" routerLink="/about">Peter Cutler</a>
-  </section>
-  <section class="main-nav-item main-pages">
-    <ul class="nav-list">
-      <li class="nav-item" *ngFor="let page of pages">
-        <a
-          class="nav-link {{page}}-link"
-          routerLink="/{{page}}"
-          routerLinkActive="nav-link-active">
-          {{page}}
-        </a>
-      </li>
-    </ul>
-  </section>
-  <section class="main-nav-item nav-contact-links">
-    <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter"></a>
-    <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
-    <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
-  </section>
-</nav>
+<app-nav></app-nav>
 
 <div class="mobile-border"></div>
 
