--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,12 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 
-$fa-font-path : '~@fortawesome/fontawesome-free/webfonts';
-
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
-@import '~@fortawesome/fontawesome-free/scss/fa-regular';
-@import '~@fortawesome/fontawesome-free/scss/fa-solid';
-@import '~@fortawesome/fontawesome-free/scss/fa-brands';
+// $fa-font-path : '~@fortawesome/fontawesome-free/webfonts';
+// @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
 // Core, do not re-order
 @import './resets';
